feat: adapt already existent ExtractionDataRectifier.rectifyDate to get ProcessReceiptToRectifyDto dto as param and overload method to receive ConfirmReceiptToRectifyDto, update ExtractionDataRectifierTest, create RectifiedReceiptDto as return type of both rectifyDate() methods, create ProductsToRectifyDto to be used in flow