@@ -1,9 +1,13 @@
 package com.isalvama.fresh_keep.modules.shopping_receipt.application.service;
 
 import com.isalvama.fresh_keep.modules.shopping_receipt.application.port.out.dto.ProductExtraction;
-import com.isalvama.fresh_keep.modules.shopping_receipt.application.port.out.dto.ReceiptExtraction;
-import com.isalvama.fresh_keep.modules.shopping_receipt.application.port.out.dto.StorageSpotDto;
-import com.isalvama.fresh_keep.modules.shopping_receipt.application.service.dto.RectifyExtractionDto;
+import com.isalvama.fresh_keep.modules.shopping_receipt.application.service.dto.ConfirmReceiptToRectifyDto;
+import com.isalvama.fresh_keep.modules.shopping_receipt.application.service.dto.ProcessReceiptToRectifyDto;
+import com.isalvama.fresh_keep.modules.shopping_receipt.application.service.dto.RectifiedReceiptDto;
+import com.isalvama.fresh_keep.modules.shopping_receipt.domain.model.ShoppingReceipt;
+import com.isalvama.fresh_keep.modules.shopping_receipt.domain.model.value_object.ReceiptImageId;
+import com.isalvama.fresh_keep.modules.space.domain.model.value_object.SpaceId;
+import com.isalvama.fresh_keep.modules.user.domain.model.value_object.UserId;
 import org.junit.jupiter.api.Test;
 
 import java.math.BigDecimal;
@@ -13,137 +17,88 @@ import java.time.LocalDate;
 import java.time.ZoneOffset;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
 
 class ExtractionDataRectifierTest {
 
     private final ExtractionDataRectifier rectifier = new ExtractionDataRectifier();
-
-    private final Clock clockNow = Clock.fixed(Instant.parse("2026-09-01T10:00:00Z"), ZoneOffset.UTC);
-    private final LocalDate today = LocalDate.now(clockNow);
-    private final LocalDate tomorrow = today.plusDays(1);
-
-    private final String storeName = "SuperMart";
-    private final String fridgeId = "fridge-id";
-    private final LocalDate milkSuggestedExpDate = LocalDate.of(2026, 9, 10);
-
-    private final List<ProductExtraction> productExtractionList = List.of(
-            new ProductExtraction(milkSuggestedExpDate, "Milk", fridgeId, "DAIRY", BigDecimal.valueOf(2.5), "USD")
+    private final Clock clock = Clock.fixed(Instant.parse("2026-09-01T10:00:00Z"), ZoneOffset.UTC);
+    private final LocalDate today = LocalDate.now(clock);
+    private final ProductExtraction milk = new ProductExtraction(
+            LocalDate.of(2026, 9, 10), "Milk", "fridge-id", "DAIRY", BigDecimal.valueOf(2.5), "USD"
     );
 
-    private final List<StorageSpotDto> storageSpotDtos = List.of(StorageSpotDto.create(fridgeId, "Fridge", "FRIDGE"));
-
     @Test
-    void rectifyPurchaseDate_clampsAFuturePurchaseDateToToday() {
-        RectifyExtractionDto dto = new RectifyExtractionDto(
-                new ReceiptExtraction(tomorrow, storeName, null, productExtractionList),
-                storageSpotDtos,
-                clockNow
+    void processRectification_clampsFuturePurchaseDateAndShiftsExpirationDates() {
+        RectifiedReceiptDto result = rectifier.rectifyPurchaseDate(
+                new ProcessReceiptToRectifyDto(today.plusDays(1), clock, List.of(milk))
         );
-
-        ReceiptExtraction result = rectifier.rectifyPurchaseDate(dto);
 
         assertEquals(today, result.purchaseDate());
+        assertEquals(milk.expirationDate().minusDays(1), result.productExtractions().getFirst().expirationDate());
     }
 
     @Test
-    void rectifyPurchaseDate_shiftsEveryProductsExpirationDateByTheSameCorrectionWhenPurchaseDateIsClamped() {
-        RectifyExtractionDto dto = new RectifyExtractionDto(
-                new ReceiptExtraction(tomorrow, storeName, null, productExtractionList),
-                storageSpotDtos,
-                clockNow
+    void processRectification_leavesValidDatesUnchanged() {
+        RectifiedReceiptDto result = rectifier.rectifyPurchaseDate(
+                new ProcessReceiptToRectifyDto(today, clock, List.of(milk))
         );
-
-        ReceiptExtraction result = rectifier.rectifyPurchaseDate(dto);
-
-        assertEquals(milkSuggestedExpDate.minusDays(1), result.productExtractions().getFirst().expirationDate());
-    }
-
-    @Test
-    void rectifyPurchaseDate_leavesPurchaseDateAndExpirationDateUnchangedWhenPurchaseDateIsNotInTheFuture() {
-        RectifyExtractionDto dto = new RectifyExtractionDto(
-                new ReceiptExtraction(today, storeName, null, productExtractionList),
-                storageSpotDtos,
-                clockNow
-        );
-
-        ReceiptExtraction result = rectifier.rectifyPurchaseDate(dto);
 
         assertEquals(today, result.purchaseDate());
-        assertEquals(milkSuggestedExpDate, result.productExtractions().getFirst().expirationDate());
+        assertEquals(milk.expirationDate(), result.productExtractions().getFirst().expirationDate());
     }
 
     @Test
-    void rectifyPurchaseDate_keepsExpirationDateNullWhenAiDidNotProvideOne() {
-        RectifyExtractionDto dto = new RectifyExtractionDto(
-                new ReceiptExtraction(
-                        tomorrow,
-                        storeName,
-                        null,
-                        List.of(new ProductExtraction(null, "Milk", fridgeId, "DAIRY", BigDecimal.valueOf(2.5), "USD"))
-                ),
-                storageSpotDtos,
-                clockNow
+    void processRectification_preservesNullExpirationDates() {
+        ProductExtraction productWithoutExpiration = new ProductExtraction(
+                null, "Milk", "fridge-id", "DAIRY", BigDecimal.valueOf(2.5), "USD"
         );
 
-        ReceiptExtraction result = rectifier.rectifyPurchaseDate(dto);
+        RectifiedReceiptDto result = rectifier.rectifyPurchaseDate(
+                new ProcessReceiptToRectifyDto(today.plusDays(1), clock, List.of(productWithoutExpiration))
+        );
 
         assertNull(result.productExtractions().getFirst().expirationDate());
     }
 
     @Test
-    void rectifyPurchaseDate_doesNotTouchSuggestedStorageSpotId() {
-        // Storage-spot fallback resolution is StorageSpotSuggestionResolver's responsibility now, not this class's.
-        RectifyExtractionDto dto = new RectifyExtractionDto(
-                new ReceiptExtraction(
-                        tomorrow,
-                        storeName,
-                        null,
-                        List.of(new ProductExtraction(milkSuggestedExpDate, "Milk", "invalid-id", "DAIRY", BigDecimal.valueOf(2.5), "USD"))
-                ),
-                storageSpotDtos,
-                clockNow
+    void confirmationRectification_shiftsDatesWhenTheShoppingDateMovesForward() {
+        LocalDate oldDate = today.minusDays(2);
+        ShoppingReceipt receipt = ShoppingReceipt.createDraft(
+                UserId.create(), SpaceId.create(), ReceiptImageId.create(), oldDate, "Store", clock
         );
 
-        ReceiptExtraction result = rectifier.rectifyPurchaseDate(dto);
+        RectifiedReceiptDto result = rectifier.rectifyPurchaseDate(
+                new ConfirmReceiptToRectifyDto(oldDate, today, clock, List.of(milk))
+        );
 
-        assertEquals("invalid-id", result.productExtractions().getFirst().suggestedStorageSpotId());
+        assertEquals(today, result.purchaseDate());
+        assertEquals(milk.expirationDate().plusDays(2), result.productExtractions().getFirst().expirationDate());
+        assertEquals(receipt.getPurchaseDate(), oldDate);
     }
 
     @Test
-    void rectifyPurchaseDate_processesEachProductInTheListIndependently() {
-        RectifyExtractionDto dto = new RectifyExtractionDto(
-                new ReceiptExtraction(
-                        tomorrow,
-                        storeName,
-                        null,
-                        List.of(
-                                new ProductExtraction(milkSuggestedExpDate, "Milk", fridgeId, "DAIRY", BigDecimal.valueOf(2.5), "USD"),
-                                new ProductExtraction(LocalDate.of(2026, 9, 20), "Bread", fridgeId, "BAKERY", BigDecimal.valueOf(1.5), "USD")
-                        )
-                ),
-                storageSpotDtos,
-                clockNow
+    void confirmationRectification_shiftsDatesWhenTheShoppingDateMovesBackward() {
+        LocalDate editedDate = today.minusDays(1);
+
+        RectifiedReceiptDto result = rectifier.rectifyPurchaseDate(
+                new ConfirmReceiptToRectifyDto(today, editedDate, clock, List.of(milk))
         );
 
-        ReceiptExtraction result = rectifier.rectifyPurchaseDate(dto);
-
-        assertEquals(2, result.productExtractions().size());
-        assertEquals(milkSuggestedExpDate.minusDays(1), result.productExtractions().get(0).expirationDate());
-        assertEquals(LocalDate.of(2026, 9, 19), result.productExtractions().get(1).expirationDate());
+        assertEquals(editedDate, result.purchaseDate());
+        assertEquals(milk.expirationDate().minusDays(1), result.productExtractions().getFirst().expirationDate());
     }
 
     @Test
-    void rectifyPurchaseDate_preservesStoreNameAndErrorReason() {
-        RectifyExtractionDto dto = new RectifyExtractionDto(
-                new ReceiptExtraction(today, storeName, "some error", productExtractionList),
-                storageSpotDtos,
-                clockNow
+    void confirmationRectification_keepsOriginalDateWhenEditedDateIsInTheFuture() {
+        LocalDate oldDate = today.minusDays(1);
+
+        RectifiedReceiptDto result = rectifier.rectifyPurchaseDate(
+                new ConfirmReceiptToRectifyDto(oldDate, today.plusDays(1), clock, List.of(milk))
         );
 
-        ReceiptExtraction result = rectifier.rectifyPurchaseDate(dto);
-
-        assertEquals(storeName, result.storeName());
-        assertEquals("some error", result.errorReason());
+        assertEquals(oldDate, result.purchaseDate());
+        assertEquals(milk.expirationDate(), result.productExtractions().getFirst().expirationDate());
     }
 }
